[workspace]
members = [
    "type-conversion",
    "complex-num",
    "compound-type",
    "flow-control",
    "match-pattern",
    "method",
    "generics-and-traits",
    "collections",
    "lifetime",
    "error",
    "module",
    "comments",
    "formatted-output",
    "functional-programming",
]
resolver = "2"