[workspace]
members = [
    "type-conversion",
    "complex-num",
    "compound-type",
    "flow-control",
    "match-pattern",
    "method",
    "generics-and-traits",
    "collections",
    "lifetime",
    "error",
    "module",
    "comments",
    "formatted-output",
    "functional-programming",
    "into-types",
    "smart-pointer",
    "circle-self-ref",
    "multithreading",
    "global-variable",
]
resolver = "2"
